--- a/OracleJETApplication/templates/home.tmpl.html
+++ b/OracleJETApplication/templates/home.tmpl.html
@@ -1,175 +1,17 @@
-<div class="oj-row">
-    <div class="oj-sm-12 oj-md-12 oj-lg-10 oj-xl-10 right">
-
-        <!-- large template -->
-        <script type="text/html" id="med_lg_xl_template">
-
-              <div class="oj-row">
-                  <div class="oj-col oj-med-12 oj-lg-12 oj-xl-12 sectionheader">
-                      <h1><span data-bind="css: iconClass"></span><span data-bind="text: sectionName" class="sectionName"></span></h1>
-                  </div>
-                  <div class="oj-col oj-med-12 oj-lg-12 oj-xl-12">
-                          <div id="tabs" data-bind="ojComponent:{component: 'ojTabs'}">
-                              <!-- tab bar -->
-                              <ul>
-                                  <!-- ko foreach: dataTabSource -->
-                                  <li data-bind="attr: {id: name}"><a data-bind='click: $parent.selectedTab'><span data-bind="text:name"></span></a></li>
-                                  <!-- /ko -->
-                              </ul>
-                               <!-- tab contents -->
-                              <div id="tabs-1">
-                                    <div data-bind="template: { name: 'tab-overview'}"></div>
-                              </div>
-                              <div id="tabs-2">
-                                    <div data-bind="template: { name: 'tab-content-2'}"></div>
-                              </div>
-                              <div id="tabs-3">
-                                    <div data-bind="template: { name: 'tab-content-3'}"></div>
-                              </div>
-                              <div id="tabs-4">
-                                    <div data-bind="template: { name: 'tab-content-4'}"></div>
-                              </div>
-                              <div id="tabs-5">
-                                    <div data-bind="template: { name: 'tab-content-5'}"></div>
-                              </div>
-                              <div id="tabs-6">
-                                    <div data-bind="template: { name: 'tab-content-6'}"></div>
-                              </div>
-                          </div>
-                      </div> 
-                  </div>
-        </script>
-
-        <!-- small template -->
-        <script type="text/html" id="sm_template">
-          <div id="sm_only" class="oj-col">
-              <div class="oj-row">
-                  <div class="oj-col">
-                    <div data-bind="ojComponent:{
-                        component: 'ojNavigationList', 
-                        drillMode: 'collapsible',
-                        item: {selectable: itemOnly},
-                        selection: selectedItem}"> 
-                        <ul>
-                            <li id="overview"><a href="#">Overview</a>
-                                <ul>
-                                    <!-- ko foreach: dataTabSource -->
-                                      <li><a class="alert" data-bind='click: $parent.selectedTab'><span data-bind="text:name"></a></li>
-                                     <!--/ko-->
-                                </ul>
-                              </li>
-                        </ul>
-                    </div>
-
-                  </div>
-
-              </div>
-              <div class="oj-row">
-
-                    <div class="oj-sm-12 header">
-                          <h1><span data-bind="css: iconClass"></span><span class="labor" data-bind="text: sectionName"></span></h1>
-                    </div>
-                <!-- tab contents -->
-                    <div id="tabs-1">
-                           <div data-bind="template: { name: 'tab-overview'}"></div>
-                     </div>
-                     <div id="tabs-2">
-                           <div data-bind="template: { name: 'tab-content-2'}"></div>
-                     </div>
-                     <div id="tabs-3">
-                           <div data-bind="template: { name: 'tab-content-3'}"></div>
-                     </div>
-                     <div id="tabs-4">
-                           <div data-bind="template: { name: 'tab-content-4'}"></div>
-                     </div>
-                    <div id="tabs-5">
-                           <div data-bind="template: { name: 'tab-content-5'}"></div>
-                    </div>
-                    <div id="tabs-6">
-                           <div data-bind="template: { name: 'tab-content-6'}"></div>
-                    </div>
-          </div>
-        </script>      
-        <div data-bind="template: {name: medium() ? 'med_lg_xl_template' : 'sm_template'}"></div>
-            
-    </div><!-- end of Right side -->
-        
-</div><!-- Main OJ Row End -->
-
-<script type="text/html" id="generic_template">
-<div data-bind="with: selectedTab">
-    <h1 data-bind="text: name || 'Overview' "></h1>
-    <div class="tbd">
-    Content TBD...
+<!-- large template -->
+<script type="text/html" id="med_lg_xl_template">
+    <div class="oj-col oj-med-12 oj-lg-12 oj-xl-12 page-header">
+        <h1 style="display: inline-block;">
+            <span data-bind="css: pageHeadingIconClass"></span>
+            <span data-bind="text: pageHeading"></span>
+        </h1>
+        <span data-bind="text: pageSubNavigation"></span>
+        <a href="#">change</a>
     </div>
-</div>
+</script>
+<!-- small template -->
+<script type="text/html" id="sm_template">
 
 </script>
 
-<script type="text/html" id="tab-overview">
-<div data-bind="with: selectedTab">
-    <h1 data-bind="text: name"></h1>
-    <div class="tbd">
-    Content TBD...Dynamic Template 1 Loaded
-    </div>
-</div>
-
-</script>
-
-<script type="text/html" id="tab-content-2">
-<div data-bind="with: selectedTab">
-    <h1 data-bind="text: name"></h1>
-    <div class="tbd">
-    Content TBD...Dynamic Template 2 Loaded
-    </div>
-</div>
-
-</script>
-
-<script type="text/html" id="tab-content-3">
-<div data-bind="with: selectedTab">
-    <h1 data-bind="text: name"></h1>
-    <div class="tbd">
-    Content TBD...Dynamic Template 3 Loaded
-    </div>
-</div>
-
-</script>
-
-<script type="text/html" id="tab-content-4">
-<div data-bind="with: selectedTab">
-    <h1 data-bind="text: name"></h1>
-    <div class="tbd">
-    Content TBD...Dynamic Template 4 Loaded
-    </div>
-</div>
-
-</script>
-
-<script type="text/html" id="tab-content-5">
-<div data-bind="with: selectedTab">
-    <h1 data-bind="text: name"></h1>
-    <div class="tbd">
-    Content TBD...Dynamic Template 5 Loaded
-    </div>
-</div>
-
-</script>
-
-<script type="text/html" id="tab-content-6">
-<div data-bind="with: selectedTab">
-    <h1 data-bind="text: name"></h1>
-    <div class="tbd">
-    Content TBD...Dynamic Template 6 Loaded
-    </div>
-</div>
-
-</script>
-<script type="text/html" id="app_sidenav_template">
-    <li>
-        <a href="#">
-            <span data-bind="css: $data['iconClass']"></span>
-            <!-- ko text: $data['name'] --> <!--/ko-->
-        </a>
-    </li>    
-</script>
+<div data-bind="template: {name: $root.medium() ? 'med_lg_xl_template' : 'sm_template'}"></div>
