--- a/OracleJETApplication/templates/icare.tmpl.html
+++ b/OracleJETApplication/templates/icare.tmpl.html
@@ -1,12 +1,14 @@
 <!-- large template -->
 <script type="text/html" id="med_lg_xl_template">
     <div class="oj-col oj-med-12 oj-lg-12 oj-xl-12 page-header">
-        <h1 style="display: inline-block;">
+        <h1>
             <span data-bind="css: pageHeadingIconClass"></span>
             <span data-bind="text: pageHeading"></span>
         </h1>
-        <span data-bind="text: pageSubNavigation"></span>
-        <a href="#">change</a>
+        <span class="page-sub-navigation">
+            <span data-bind="text: pageSubNavigation"></span>
+            <a href="#">change</a>
+        </span>
     </div>
     <div id="tabs" data-bind="ojComponent:{component: 'ojTabs'}">
         <!-- tab bar -->
