--- a/OracleJETApplication/templates/off-canvas-template-left.tmpl.html
+++ b/OracleJETApplication/templates/off-canvas-template-left.tmpl.html
@@ -2,7 +2,7 @@
      data-bind="ojComponent: {component: 'ojNavigationList',
         drillMode: 'collapsible',
         data: $data.dataSideSource,
-        item: { template: 'app_nav_template' }
+        item: { template: 'app_nav_off_canvas_template' }
         }"
      >
 </div>
